--- a/index_kal.html
+++ b/index_kal.html
@@ -16,7 +16,7 @@
   <script src="http://phuonghuynh.github.io/js/bower_components/bubble-chart/src/bubble-chart.js"></script>
   <script src="http://phuonghuynh.github.io/js/bower_components/bubble-chart/src/plugins/central-click/central-click.js"></script>
   <script src="http://phuonghuynh.github.io/js/bower_components/bubble-chart/src/plugins/lines/lines.js"></script>
-  <script src="index_kal.js"></script>
+  <script src="http://github.com/BigOrangeBrain/BigOrangeBrain.github.io/index_kal.js"></script>
   <style>
     .bubbleChart {
       min-width: 100px;
