--- a/index_s.html
+++ b/index_s.html
@@ -1,74 +1,77 @@
-
 <!DOCTYPE html>
-<svg width="960" height="500"></svg>
-<style>
-   .bar {
-      fill: steelblue;
-   }
-
-      .bar:hover {
-         fill: brown;
+<html>
+<head>
+   <script src="https://d3js.org/d3.v5.min.js"></script>
+   <style>
+      .bar {
+         fill: steelblue;
       }
-</style>
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script>
 
-   var svg = d3.select("svg"),
-      margin = {
-         top: 20,
-         right: 20,
-         bottom: 30,
-         left: 50
-      },
-      width = +svg.attr("width") - margin.left - margin.right,
-      height = +svg.attr("height") - margin.top - margin.bottom,
-      g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+         .bar:hover {
+            fill: brown;
+         }
+   </style>
+</head>
+<body>
+   <h1>Big Orange Brain</h1>
+   <h2>Chart 01 - Speed</h2>
+   <div id="chart_01"></div>
+   <script>
+      var width = 800, height = 460;
 
-   var parseTime = d3.timeParse("%d-%b-%y");
+      var chart_01 = d3.select("#chart_01")
+         .append("svg")
+         .attr("width", width)
+         .attr("height", height);
 
-   var x = d3.scaleBand()
-      .rangeRound([0, width])
-      .padding(0.1);
+      var g = chart_01.append("g").attr("transform", "translate(2, 20)");
 
-   var y = d3.scaleLinear()
-      .rangeRound([height, 0]);
+      var x = d3.scaleBand()
+         .rangeRound([0, width])
+         .padding(0.1);
 
-   d3.tsv("morley.tsv").then(function (data) {
-      x.domain(data.map(function (d) {
-         return d.Run;
-      }));
-      y.domain([0, d3.max(data, function (d) {
-         return Number(d.Speed);
-      })]);
+      var y = d3.scaleLinear()
+         .rangeRound([height, 0]);
 
-      g.append("g")
-         .attr("transform", "translate(0," + height + ")")
-         .call(d3.axisBottom(x))
+      d3.tsv("morley.tsv").then(function (data) {
+         x.domain(data.map(function (d) {
+            return d.Run;
+         }));
+         y.domain([0, d3.max(data, function (d) {
+            return Number(d.Speed);
+         })]);
 
-      g.append("g")
-         .call(d3.axisLeft(y))
-         .append("text")
-         .attr("fill", "#000")
-         .attr("transform", "rotate(-90)")
-         .attr("y", 6)
-         .attr("dy", "0.71em")
-         .attr("text-anchor", "end")
-         .text("Speed");
+         g.append("g")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x))
 
-      g.selectAll(".bar")
-         .data(data)
-         .enter().append("rect")
-         .attr("class", "bar")
-         .attr("x", function (d) {
-            return x(d.Run);
-         })
-         .attr("y", function (d) {
-            return y(Number(d.Speed));
-         })
-         .attr("width", x.bandwidth())
-         .attr("height", function (d) {
-            return height - y(Number(d.Speed));
-         });
-   });
+         g.append("g")
+            .call(d3.axisLeft(y))
+            .append("text")
+            .attr("fill", "#000")
+            .attr("transform", "rotate(-90)")
+            .attr("y", 6)
+            .attr("dy", "0.71em")
+            .attr("text-anchor", "end")
+            .text("My Speed");
 
-</script>
+         g.selectAll(".bar")
+            .data(data)
+            .enter()
+            .append("rect")
+            .attr("class", "bar")
+            .attr("x", function (d) {
+               return x(d.Run);
+            })
+            .attr("y", function (d) {
+               return y(Number(d.Speed));
+            })
+            .attr("width", x.bandwidth())
+            .attr("height", function (d) {
+               return height - y(Number(d.Speed));
+            });
+      });
+
+   </script>
+</body>
+</html>
