--- a/index_s.html
+++ b/index_s.html
@@ -42,7 +42,7 @@
          })]);
 
          g.append("g")
-            .attr("transform", "translate(0," + height + ")")
+            .attr("transform", "translate(0," + 300 + ")")
             .call(d3.axisBottom(x))
 
          g.append("g")
