--- a/index_s.html
+++ b/index_s.html
@@ -76,7 +76,7 @@
             })
             .attr("width", x.bandwidth())
             .attr("height", function (d) {
-               return height - y(Number(d.Speed));
+               return sub_height - y(Number(d.Speed));
             });
       });
    </script>
