--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          background-color: black; color: white;
       }
 
-      #chart_01 {
+      #chart_01 svg {
          border: 1px solid white;
       }
 
@@ -66,7 +66,8 @@
             .append("text")
             .attr("fill", "#ffffff")
             .attr("transform", "rotate(-90)")
-            .attr("y", 6)
+            .attr("y", 0 - margin.left)
+            .attr("x", 0 - (sub_height / 2))
             .attr("dy", "1em")
             .attr("text-anchor", "middle")
             .text("My Y label");
