--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
             .append("text")
             .attr("fill", "#ffffff")
             .attr("transform", "rotate(-90)")
-            .attr("y", 0 - margin.left)
-            .attr("x", 0 - (sub_height / 2))
-            .attr("dy", "1em")
+            .attr("y", -margin.left)
+            .attr("x", -margin.left)
             .attr("text-anchor", "middle")
             .text("My Y label");
 
