--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             .attr("transform", "rotate(-90)")
             .attr("y", -margin.left)
             .attr("x", -margin.left)
+            .attr("dy", "1em")
             .attr("text-anchor", "middle")
             .text("My Y label");
 
