--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             .attr("fill", "#ffffff")
             .attr("transform", "rotate(-90)")
             .attr("y", -margin.left)
-            .attr("x", -margin.left)
+            .attr("x", -(sub_height / 2))
             .attr("dy", "1em")
             .attr("text-anchor", "middle")
             .text("My Y label");
