--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       }
 
       .bar {
-         fill: steelblue;
+         fill: #ff6a00;
       }
 
          .bar:hover {
-            fill: brown;
+            fill: #403fd9;
          }
    </style>
 </head>
