--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             .call(d3.axisBottom(x))
             .append("text")
             .attr("fill", "#ffffff")
-            .attr("transform", "translate(" + (sub_width / 2) + " ," + 40 + ")")
+            .attr("transform", "translate(0, 0)")
             .style("text-anchor", "middle")
             .text("My X label");
 
