--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       var y = d3.scaleLinear()
          .rangeRound([0, sub_height]);
 
+      var yaxis = d3.scaleLinear()
+         .rangeRound([sub_height, 0]);
+
       d3.csv("brain.csv").then(function (data) {
          x.domain(data.map(function (d) {
             return d.Run;
@@ -63,7 +66,7 @@
             .text("My X label");
 
          g.append("g")
-            .call(d3.axisLeft(y))
+            .call(d3.axisLeft(yaxis))
             .append("text")
             .attr("fill", "#ffffff")
             .attr("transform", "rotate(-90)")
