--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
       var y = d3.scaleLinear()
          .rangeRound([0, sub_height]);
 
-      var yaxis = d3.scaleLinear()
-         .rangeRound([sub_height, 0]);
-
       d3.csv("brain.csv").then(function (data) {
          x.domain(data.map(function (d) {
             return d.Run;
@@ -66,7 +63,7 @@
             .text("My X label");
 
          g.append("g")
-            .call(d3.axisLeft(yaxis))
+            .call(d3.axisLeft(y))
             .append("text")
             .attr("fill", "#ffffff")
             .attr("transform", "rotate(-90)")
@@ -86,11 +83,11 @@
                return x(d.Run);
             })
             .attr("y", function (d) {
-               return sub_height - y(Number(d.Speed));
+               return y(Number(d.Speed));
             })
             .attr("width", x.bandwidth())
             .attr("height", function (d) {
-               return y(Number(d.Speed));
+               return sub_height - y(Number(d.Speed));
             });
       });
    </script>
