--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             .attr("x", function (d) {
                return x(d.Run);
             })
+            .attr("y", 0)
+            .transition()
+            .duration(1000)
+            .delay(function (d, i) {
+               return i * 50;
+            })
             .attr("y", function (d) {
                return y(Number(d.Speed));
             })
