--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             .transition()
             .duration(1000)
             .delay(function (d, i) {
-               return i;
+               return i * 50;
             })
             .attr("y", function (d) {
                return y(Number(d.Speed));
