--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             })
             .attr("width", x.bandwidth())
             .attr("y", function(d) {
-               return sub_height - y(Number(d.Speed));
+               return 0;
             })
             .transition()
             .duration(1000)
