--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             })
             .attr("width", x.bandwidth())
             .attr("y", function(d) {
-               return 0;
+               return sub_height;
             })
             .attr("height", function (d) {
                return 0;
