--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
                           .attr("width", width)
                           .attr("height", height);
 
-         var g = chart_01.append("g").attr("transform", "translate(" + width / 2 + "," + margin.top / 2 + ")");
+         chart_01.append("g")
+                 .attr("transform", "translate(" + width / 2 + "," + margin.top / 2 + ")")
+                 .append("text")
+                 .attr("id", "chart_01_title")
+                 .attr("class", "annotation")
+                 .attr("text-anchor", "middle")
+                 .text("My Plot Title");
 
-         g.append("text")
-          .attr("id", "chart_01_title")
-            .attr("class", "annotation")
-            .attr("text-anchor", "middle")
-          .text("My Plot Title");
-
-         g.append("text")
-          .attr("x", margin.left)
-          .attr("y", margin.top)
-          .attr("id", "chart_01_comment")
-          .attr("class", "annotation")
-          .text("Data value: Waiting for mouse over");
+         chart_01.append("g")
+                 .attr("transform", "translate(" + width / 8 + "," + margin.top + ")")
+                 .append("text")
+                 .attr("id", "chart_01_comment")
+                 .attr("class", "annotation")
+                 .text("Data value: Waiting for mouse over");
 
          var g = chart_01.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
