--- a/kaltest.html
+++ b/kaltest.html
@@ -33,7 +33,7 @@
       }).addTo(my_map);
 
       L.marker([-37.814, 144.96332]).addTo(my_map)
-         .bindPopup("<b>It's Melbourne!</b><br />I am a popup with a <a href='www.google.com'>link</a>.").openPopup();
+         .bindPopup("<b>It's Melbourne!</b><br />I am a popup with a <a href='http://www.google.com'>link</a>.").openPopup();
      
       L.marker([-37.898998, 145.182999]).addTo(my_map)
          .bindPopup("<b>Home :)</b><br />I am a popup with a <a href='www.google.com'>link</a>.").openPopup();
