--- a/kaltest.html
+++ b/kaltest.html
@@ -36,7 +36,7 @@
          .bindPopup("<b>It's Melbourne!</b><br />I am a popup with a <a href='http://www.google.com'>link</a>.").openPopup();
      
       L.marker([-37.898998, 145.182999]).addTo(my_map)
-         .bindPopup("<b>Home :)</b><br />I am a popup with a <a href='www.google.com'>link</a>.").openPopup();
+         .bindPopup("<b>Home :)</b><br />I am a popup with a <a href='http://www.google.com'>link</a>.").openPopup();
    </script>
 </body>
 </html>
