--- a/kaltest.html
+++ b/kaltest.html
@@ -23,7 +23,7 @@
    <script>
 var greenIcon = L.icon({
     iconUrl: 'cup.png',
-    shadowUrl: 'cup.png',
+    shadowUrl: 'cupshadow.png',
 
     iconSize:     [38, 95], // size of the icon
     shadowSize:   [50, 64], // size of the shadow
