--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <script src="https://d3js.org/d3.v5.min.js"></script>
    <script>
       function govhack() {
-         var width = 600, height = 400;
-         var margin = { top: 50, right: 20, bottom: 30, left: 50 };
+         var width = 600, height = 470;
+         var margin = { top: 70, right: 20, bottom: 30, left: 50 };
          var sub_width = width - margin.left - margin.right;
          var sub_height = height - margin.top - margin.bottom;
 
@@ -28,26 +28,27 @@
                  .append("text")
                  .attr("id", "chart_01_comment")
                  .attr("class", "annotation")
+                 .attr("text-anchor", "left")
                  .text("Data value: Waiting for mouse over");
 
-         var g = chart_01.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-         var x = d3.scaleBand()
-            .rangeRound([0, sub_width])
-            .padding(0.1);
-
-         var y = d3.scaleLinear()
-            .rangeRound([sub_height, 0]);
-
          d3.csv("brain.csv").then(function(data) {
+            var x = d3.scaleBand()
+               .rangeRound([0, sub_width])
+               .padding(0.1);
+
+            var y = d3.scaleLinear()
+               .rangeRound([sub_height, 0]);
+
             x.domain(data.map(function(d) { return d.Run; }));
             y.domain([0, d3.max(data, function(d) { return Number(d.Speed); })]);
+
+            var g = chart_01.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
             g.append("g")
                .attr("transform", "translate(0," + sub_height + ")")
                .call(d3.axisBottom(x))
                .append("text")
-               .attr("fill", "#ffffff")
+               .attr("class", "label")
                .attr("transform", "translate(" + sub_width / 2 + ", 26)")
                .style("text-anchor", "middle")
                .text("My X label");
@@ -55,7 +56,7 @@
             g.append("g")
                .call(d3.axisLeft(y))
                .append("text")
-               .attr("fill", "#ffffff")
+               .attr("class", "label")
                .attr("transform", "rotate(-90)")
                //.attr("transform", "translate(" + -(sub_height / 2) + "," + -margin.left +")")
                .attr("y", -margin.left)
@@ -102,6 +103,10 @@
       .annotation {
          fill: white;
          font: bold 12px sans-serif;
+      }
+
+      .label {
+         fill: white;
       }
 
       .bar {
