--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  .text("My Plot Title");
 
          chart_01.append("g")
-                 .attr("transform", "translate(" + width / 8 + "," + margin.top 3 * 2  + ")")
+                 .attr("transform", "translate(" + width / 8 + "," + margin.top / 3 * 2  + ")")
                  .append("text")
                  .attr("id", "chart_01_comment")
                  .attr("class", "annotation")
