--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                .call(d3.axisBottom(x))
                .append("text")
                .attr("class", "label")
-               .attr("transform", "translate(" + sub_width / 2 + ", " + margin.bottom / 2 + ")")
+               .attr("transform", "translate(" + sub_width / 2 + ", " + margin.bottom / 3 * 2 + ")")
                .style("text-anchor", "middle")
                .text("My X label");
 
