--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                .call(d3.axisLeft(y))
                .append("text")
                .attr("class", "label")
-               .attr("transform", "rotate(-90)")
+            //   .attr("transform", "rotate(-90)")
                .attr("transform", "translate(" + sub_height / 2 + "," + margin.left / 2 +")")
            //    .attr("y", -margin.left)
            //    .attr("x", -(sub_height / 2))
