--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                .append("text")
                .attr("class", "label")
             //   .attr("transform", "rotate(-90)")
-               .attr("transform", "translate(" + sub_height / 2 + "," + margin.left / 2 +")")
+               .attr("transform", "translate(" + -margin.left / 2 + "," + sub_height / 2 +")")
            //    .attr("y", -margin.left)
            //    .attr("x", -(sub_height / 2))
        //        .attr("dy", "1em")
