--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
    <title>GovHack 2018 - Big Orange Brain Entry</title>
    <script src="https://d3js.org/d3.v5.min.js"></script>
    <script>
-      function govhack() {
+      function govhack(div_id) {
          var width = 600, height = 470;
          var margin = { top: 70, right: 20, bottom: 50, left: 50 };
          var sub_width = width - margin.left - margin.right;
          var sub_height = height - margin.top - margin.bottom;
 
-         var chart_01 = d3.select("#chart_01")
+         var chart = d3.select(div_id)
                           .append("svg")
                           .attr("width", width)
                           .attr("height", height);
 
-         chart_01.append("g")
+         chart.append("g")
                  .attr("transform", "translate(" + width / 2 + ", " + margin.top / 3 * 1 + ")")
                  .append("text")
                  .attr("id", "chart_01_title")
@@ -23,7 +23,7 @@
                  .attr("text-anchor", "middle")
                  .text("My Plot Title");
 
-         chart_01.append("g")
+         chart.append("g")
                  .attr("transform", "translate(" + width / 8 + ", " + margin.top / 3 * 2  + ")")
                  .append("text")
                  .attr("id", "chart_01_comment")
@@ -118,10 +118,11 @@
       }
    </style>
 </head>
-<body onload="govhack()">
+<body onload="govhack('#chart_01');">
    <h1>Big Orange Brain</h1>
    <h2>Chart 01 - Sample</h2>
    <div id="chart_01"></div>
+   <h2>Chart 02 - Sample</h2>
    <div id="chart_02"></div>
 </body>
 </html>
