--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                .call(d3.axisLeft(y))
                .append("text")
                .attr("class", "label")
-            //   .attr("transform", "rotate(-90)")
-               .attr("transform", "translate(" + -margin.left / 2 + "," + sub_height / 2 +")")
+               .attr("transform", "translate(" + -margin.left / 2 + "," + sub_height / 2 + ")")
+               .attr("transform", "rotate(-90)")
            //    .attr("y", -margin.left)
            //    .attr("x", -(sub_height / 2))
        //        .attr("dy", "1em")
